--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
